// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic function 1`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"cdktfstack_wingapp_Function_IamRole_D839DAD0\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"cdktfstack_wingapp_Function_IamRolePolicy_7D736E5A\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function_IamRole_D839DAD0.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"cdktfstack_wingapp_Function_IamRolePolicyAttachment_F24018FA\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function_IamRole_D839DAD0.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"cdktfstack_wingapp_Function_EBD52E07\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Function-c852aba6\\"
          }
        },
        \\"function_name\\": \\"Function-c852aba6\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function_IamRole_D839DAD0.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
<<<<<<< HEAD
        \\"s3_bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_Function_Bucket_A67EF78E.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.cdktfstack_wingapp_Function_S3Object_F34234B4.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"cdktfstack_wingapp_Function_Bucket_A67EF78E\\": {}
    },
    \\"aws_s3_object\\": {
      \\"cdktfstack_wingapp_Function_S3Object_F34234B4\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_Function_Bucket_A67EF78E.bucket}\\",
=======
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_Function_Code_794C2A8A.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_Function_S3Object_A62722D8.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"root_Function_Code_794C2A8A\\": {
        \\"bucket_prefix\\": \\"code-c87cd513-\\"
      }
    },
    \\"aws_s3_object\\": {
      \\"root_Function_S3Object_A62722D8\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_Function_Code_794C2A8A.bucket}\\",
>>>>>>> main
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;

exports[`basic function 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "cdktf-stack": Object {
        "children": Object {
<<<<<<< HEAD
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.14.1",
=======
          "Function": Object {
            "attributes": Object {
              "wing:resource:connections": Array [
                Object {
                  "direction": "outbound",
                  "implicit": true,
                  "relationship": "print",
                  "resource": "root/WingLogger",
                },
              ],
              "wing:resource:stateful": false,
>>>>>>> main
            },
            "id": "backend",
            "path": "cdktf-stack/backend",
          },
          "wing-app": Object {
            "children": Object {
<<<<<<< HEAD
              "Function": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": false,
=======
              "Asset": Object {
                "constructInfo": Object {
                  "fqn": "cdktf.TerraformAsset",
                  "version": "0.15.0",
>>>>>>> main
                },
                "children": Object {
                  "Asset": Object {
                    "constructInfo": Object {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.14.1",
                    },
                    "id": "Asset",
                    "path": "cdktf-stack/wing-app/Function/Asset",
                  },
                  "Bucket": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                      "version": "11.0.4",
                    },
                    "id": "Bucket",
                    "path": "cdktf-stack/wing-app/Function/Bucket",
                  },
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.lambdaFunction.LambdaFunction",
                      "version": "11.0.4",
                    },
                    "id": "Default",
                    "path": "cdktf-stack/wing-app/Function/Default",
                  },
                  "IamRole": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                      "version": "11.0.4",
                    },
                    "id": "IamRole",
                    "path": "cdktf-stack/wing-app/Function/IamRole",
                  },
                  "IamRolePolicy": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                      "version": "11.0.4",
                    },
                    "id": "IamRolePolicy",
                    "path": "cdktf-stack/wing-app/Function/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRolePolicyAttachment.IamRolePolicyAttachment",
                      "version": "11.0.4",
                    },
                    "id": "IamRolePolicyAttachment",
                    "path": "cdktf-stack/wing-app/Function/IamRolePolicyAttachment",
                  },
                  "S3Object": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3Object.S3Object",
                      "version": "11.0.4",
                    },
                    "id": "S3Object",
                    "path": "cdktf-stack/wing-app/Function/S3Object",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.0.25",
                },
                "id": "Function",
                "path": "cdktf-stack/wing-app/Function",
              },
<<<<<<< HEAD
              "aws": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "11.0.4",
                },
                "id": "aws",
                "path": "cdktf-stack/wing-app/aws",
=======
              "Code": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                  "version": "12.0.1",
                },
                "id": "Code",
                "path": "root/Function/Code",
              },
              "Default": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.lambdaFunction.LambdaFunction",
                  "version": "12.0.1",
                },
                "id": "Default",
                "path": "root/Function/Default",
              },
              "IamRole": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                  "version": "12.0.1",
                },
                "id": "IamRole",
                "path": "root/Function/IamRole",
              },
              "IamRolePolicy": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                  "version": "12.0.1",
                },
                "id": "IamRolePolicy",
                "path": "root/Function/IamRolePolicy",
              },
              "IamRolePolicyAttachment": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.iamRolePolicyAttachment.IamRolePolicyAttachment",
                  "version": "12.0.1",
                },
                "id": "IamRolePolicyAttachment",
                "path": "root/Function/IamRolePolicyAttachment",
              },
              "S3Object": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.s3Object.S3Object",
                  "version": "12.0.1",
                },
                "id": "S3Object",
                "path": "root/Function/S3Object",
>>>>>>> main
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "display": Object {
              "description": "A cloud function (FaaS)",
              "title": "Function",
            },
<<<<<<< HEAD
            "id": "wing-app",
            "path": "cdktf-stack/wing-app",
=======
            "id": "Function",
            "path": "root/Function",
          },
          "Handler": Object {
            "attributes": Object {
              "wing:resource:connections": Array [],
              "wing:resource:stateful": false,
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "display": Object {
              "description": "An inflight resource",
              "hidden": true,
              "title": "Inflight",
            },
            "id": "Handler",
            "path": "root/Handler",
          },
          "WingLogger": Object {
            "attributes": Object {
              "wing:resource:connections": Array [
                Object {
                  "direction": "inbound",
                  "implicit": true,
                  "relationship": "print",
                  "resource": "root/Function",
                },
              ],
              "wing:resource:stateful": true,
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "display": Object {
              "description": "A cloud logging facility",
              "hidden": true,
              "title": "Logger",
            },
            "id": "WingLogger",
            "path": "root/WingLogger",
          },
          "aws": Object {
            "constructInfo": Object {
              "fqn": "@cdktf/provider-aws.provider.AwsProvider",
              "version": "12.0.1",
            },
            "id": "aws",
            "path": "root/aws",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.0",
            },
            "id": "backend",
            "path": "root/backend",
>>>>>>> main
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
<<<<<<< HEAD
          "version": "0.14.1",
=======
          "version": "0.15.0",
>>>>>>> main
        },
        "id": "cdktf-stack",
        "path": "cdktf-stack",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
<<<<<<< HEAD
      "version": "0.14.1",
=======
      "version": "0.15.0",
>>>>>>> main
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`basic function with environment variables 1`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"cdktfstack_wingapp_Function_IamRole_D839DAD0\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"cdktfstack_wingapp_Function_IamRolePolicy_7D736E5A\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function_IamRole_D839DAD0.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"cdktfstack_wingapp_Function_IamRolePolicyAttachment_F24018FA\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function_IamRole_D839DAD0.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"cdktfstack_wingapp_Function_EBD52E07\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"BOOM\\": \\"BAM\\",
            \\"FOO\\": \\"BAR\\",
            \\"WING_FUNCTION_NAME\\": \\"Function-c852aba6\\"
          }
        },
        \\"function_name\\": \\"Function-c852aba6\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.cdktfstack_wingapp_Function_IamRole_D839DAD0.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
<<<<<<< HEAD
        \\"s3_bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_Function_Bucket_A67EF78E.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.cdktfstack_wingapp_Function_S3Object_F34234B4.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"cdktfstack_wingapp_Function_Bucket_A67EF78E\\": {}
    },
    \\"aws_s3_object\\": {
      \\"cdktfstack_wingapp_Function_S3Object_F34234B4\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.cdktfstack_wingapp_Function_Bucket_A67EF78E.bucket}\\",
=======
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_Function_Code_794C2A8A.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_Function_S3Object_A62722D8.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"root_Function_Code_794C2A8A\\": {
        \\"bucket_prefix\\": \\"code-c87cd513-\\"
      }
    },
    \\"aws_s3_object\\": {
      \\"root_Function_S3Object_A62722D8\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_Function_Code_794C2A8A.bucket}\\",
>>>>>>> main
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;

exports[`basic function with environment variables 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "cdktf-stack": Object {
        "children": Object {
<<<<<<< HEAD
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.14.1",
=======
          "Function": Object {
            "attributes": Object {
              "wing:resource:connections": Array [
                Object {
                  "direction": "outbound",
                  "implicit": true,
                  "relationship": "print",
                  "resource": "root/WingLogger",
                },
              ],
              "wing:resource:stateful": false,
>>>>>>> main
            },
            "id": "backend",
            "path": "cdktf-stack/backend",
          },
          "wing-app": Object {
            "children": Object {
<<<<<<< HEAD
              "Function": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": false,
=======
              "Asset": Object {
                "constructInfo": Object {
                  "fqn": "cdktf.TerraformAsset",
                  "version": "0.15.0",
>>>>>>> main
                },
                "children": Object {
                  "Asset": Object {
                    "constructInfo": Object {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.14.1",
                    },
                    "id": "Asset",
                    "path": "cdktf-stack/wing-app/Function/Asset",
                  },
                  "Bucket": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                      "version": "11.0.4",
                    },
                    "id": "Bucket",
                    "path": "cdktf-stack/wing-app/Function/Bucket",
                  },
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.lambdaFunction.LambdaFunction",
                      "version": "11.0.4",
                    },
                    "id": "Default",
                    "path": "cdktf-stack/wing-app/Function/Default",
                  },
                  "IamRole": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                      "version": "11.0.4",
                    },
                    "id": "IamRole",
                    "path": "cdktf-stack/wing-app/Function/IamRole",
                  },
                  "IamRolePolicy": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                      "version": "11.0.4",
                    },
                    "id": "IamRolePolicy",
                    "path": "cdktf-stack/wing-app/Function/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRolePolicyAttachment.IamRolePolicyAttachment",
                      "version": "11.0.4",
                    },
                    "id": "IamRolePolicyAttachment",
                    "path": "cdktf-stack/wing-app/Function/IamRolePolicyAttachment",
                  },
                  "S3Object": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3Object.S3Object",
                      "version": "11.0.4",
                    },
                    "id": "S3Object",
                    "path": "cdktf-stack/wing-app/Function/S3Object",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.0.25",
                },
                "id": "Function",
                "path": "cdktf-stack/wing-app/Function",
              },
<<<<<<< HEAD
              "aws": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "11.0.4",
                },
                "id": "aws",
                "path": "cdktf-stack/wing-app/aws",
=======
              "Code": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                  "version": "12.0.1",
                },
                "id": "Code",
                "path": "root/Function/Code",
              },
              "Default": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.lambdaFunction.LambdaFunction",
                  "version": "12.0.1",
                },
                "id": "Default",
                "path": "root/Function/Default",
              },
              "IamRole": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                  "version": "12.0.1",
                },
                "id": "IamRole",
                "path": "root/Function/IamRole",
              },
              "IamRolePolicy": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                  "version": "12.0.1",
                },
                "id": "IamRolePolicy",
                "path": "root/Function/IamRolePolicy",
              },
              "IamRolePolicyAttachment": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.iamRolePolicyAttachment.IamRolePolicyAttachment",
                  "version": "12.0.1",
                },
                "id": "IamRolePolicyAttachment",
                "path": "root/Function/IamRolePolicyAttachment",
              },
              "S3Object": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.s3Object.S3Object",
                  "version": "12.0.1",
                },
                "id": "S3Object",
                "path": "root/Function/S3Object",
>>>>>>> main
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "display": Object {
              "description": "A cloud function (FaaS)",
              "title": "Function",
            },
<<<<<<< HEAD
            "id": "wing-app",
            "path": "cdktf-stack/wing-app",
=======
            "id": "Function",
            "path": "root/Function",
          },
          "Handler": Object {
            "attributes": Object {
              "wing:resource:connections": Array [],
              "wing:resource:stateful": false,
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "display": Object {
              "description": "An inflight resource",
              "hidden": true,
              "title": "Inflight",
            },
            "id": "Handler",
            "path": "root/Handler",
          },
          "WingLogger": Object {
            "attributes": Object {
              "wing:resource:connections": Array [
                Object {
                  "direction": "inbound",
                  "implicit": true,
                  "relationship": "print",
                  "resource": "root/Function",
                },
              ],
              "wing:resource:stateful": true,
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "display": Object {
              "description": "A cloud logging facility",
              "hidden": true,
              "title": "Logger",
            },
            "id": "WingLogger",
            "path": "root/WingLogger",
          },
          "aws": Object {
            "constructInfo": Object {
              "fqn": "@cdktf/provider-aws.provider.AwsProvider",
              "version": "12.0.1",
            },
            "id": "aws",
            "path": "root/aws",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.0",
            },
            "id": "backend",
            "path": "root/backend",
>>>>>>> main
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
<<<<<<< HEAD
          "version": "0.14.1",
=======
          "version": "0.15.0",
>>>>>>> main
        },
        "id": "cdktf-stack",
        "path": "cdktf-stack",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
<<<<<<< HEAD
      "version": "0.14.1",
=======
      "version": "0.15.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`function name valid 1`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"root_TheMightyFunction01_IamRole_34EB69E9\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_TheMightyFunction01_IamRolePolicy_366404CE\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_TheMightyFunction01_IamRole_34EB69E9.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_TheMightyFunction01_IamRolePolicyAttachment_4F1EB129\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_TheMightyFunction01_IamRole_34EB69E9.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_TheMightyFunction01_F0DB42C1\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"The-Mighty_Function-01-c86057f3\\"
          }
        },
        \\"function_name\\": \\"The-Mighty_Function-01-c86057f3\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.root_TheMightyFunction01_IamRole_34EB69E9.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_TheMightyFunction01_Code_019941EA.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_TheMightyFunction01_S3Object_6949E35F.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"root_TheMightyFunction01_Code_019941EA\\": {
        \\"bucket_prefix\\": \\"code-c825ce49-\\"
      }
    },
    \\"aws_s3_object\\": {
      \\"root_TheMightyFunction01_S3Object_6949E35F\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_TheMightyFunction01_Code_019941EA.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;

exports[`function name valid 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Handler": Object {
            "attributes": Object {
              "wing:resource:connections": Array [],
              "wing:resource:stateful": false,
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "display": Object {
              "description": "An inflight resource",
              "hidden": true,
              "title": "Inflight",
            },
            "id": "Handler",
            "path": "root/Handler",
          },
          "The-Mighty_Function-01": Object {
            "attributes": Object {
              "wing:resource:connections": Array [
                Object {
                  "direction": "outbound",
                  "implicit": true,
                  "relationship": "print",
                  "resource": "root/WingLogger",
                },
              ],
              "wing:resource:stateful": false,
            },
            "children": Object {
              "Asset": Object {
                "constructInfo": Object {
                  "fqn": "cdktf.TerraformAsset",
                  "version": "0.15.0",
                },
                "id": "Asset",
                "path": "root/The-Mighty_Function-01/Asset",
              },
              "Code": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                  "version": "12.0.1",
                },
                "id": "Code",
                "path": "root/The-Mighty_Function-01/Code",
              },
              "Default": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.lambdaFunction.LambdaFunction",
                  "version": "12.0.1",
                },
                "id": "Default",
                "path": "root/The-Mighty_Function-01/Default",
              },
              "IamRole": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                  "version": "12.0.1",
                },
                "id": "IamRole",
                "path": "root/The-Mighty_Function-01/IamRole",
              },
              "IamRolePolicy": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                  "version": "12.0.1",
                },
                "id": "IamRolePolicy",
                "path": "root/The-Mighty_Function-01/IamRolePolicy",
              },
              "IamRolePolicyAttachment": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.iamRolePolicyAttachment.IamRolePolicyAttachment",
                  "version": "12.0.1",
                },
                "id": "IamRolePolicyAttachment",
                "path": "root/The-Mighty_Function-01/IamRolePolicyAttachment",
              },
              "S3Object": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.s3Object.S3Object",
                  "version": "12.0.1",
                },
                "id": "S3Object",
                "path": "root/The-Mighty_Function-01/S3Object",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "display": Object {
              "description": "A cloud function (FaaS)",
              "title": "Function",
            },
            "id": "The-Mighty_Function-01",
            "path": "root/The-Mighty_Function-01",
          },
          "WingLogger": Object {
            "attributes": Object {
              "wing:resource:connections": Array [
                Object {
                  "direction": "inbound",
                  "implicit": true,
                  "relationship": "print",
                  "resource": "root/The-Mighty_Function-01",
                },
              ],
              "wing:resource:stateful": true,
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "display": Object {
              "description": "A cloud logging facility",
              "hidden": true,
              "title": "Logger",
            },
            "id": "WingLogger",
            "path": "root/WingLogger",
          },
          "aws": Object {
            "constructInfo": Object {
              "fqn": "@cdktf/provider-aws.provider.AwsProvider",
              "version": "12.0.1",
            },
            "id": "aws",
            "path": "root/aws",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`replace invalid character from function name 1`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"root_TheMightyFunction_IamRole_DF8277B4\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_TheMightyFunction_IamRolePolicy_8379B0E6\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_TheMightyFunction_IamRole_DF8277B4.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_TheMightyFunction_IamRolePolicyAttachment_BC72ACBA\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_TheMightyFunction_IamRole_DF8277B4.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_TheMightyFunction_E909CD7D\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"The-Mighty-Function-c86ccf73\\"
          }
        },
        \\"function_name\\": \\"The-Mighty-Function-c86ccf73\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.root_TheMightyFunction_IamRole_DF8277B4.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_TheMightyFunction_Code_28F77D89.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_TheMightyFunction_S3Object_D0A75871.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"root_TheMightyFunction_Code_28F77D89\\": {
        \\"bucket_prefix\\": \\"code-c8cf0523-\\"
      }
    },
    \\"aws_s3_object\\": {
      \\"root_TheMightyFunction_S3Object_D0A75871\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_TheMightyFunction_Code_28F77D89.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;

exports[`replace invalid character from function name 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Handler": Object {
            "attributes": Object {
              "wing:resource:connections": Array [],
              "wing:resource:stateful": false,
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "display": Object {
              "description": "An inflight resource",
              "hidden": true,
              "title": "Inflight",
            },
            "id": "Handler",
            "path": "root/Handler",
          },
          "The%Mighty$Function": Object {
            "attributes": Object {
              "wing:resource:connections": Array [
                Object {
                  "direction": "outbound",
                  "implicit": true,
                  "relationship": "print",
                  "resource": "root/WingLogger",
                },
              ],
              "wing:resource:stateful": false,
            },
            "children": Object {
              "Asset": Object {
                "constructInfo": Object {
                  "fqn": "cdktf.TerraformAsset",
                  "version": "0.15.0",
                },
                "id": "Asset",
                "path": "root/The%Mighty$Function/Asset",
              },
              "Code": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                  "version": "12.0.1",
                },
                "id": "Code",
                "path": "root/The%Mighty$Function/Code",
              },
              "Default": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.lambdaFunction.LambdaFunction",
                  "version": "12.0.1",
                },
                "id": "Default",
                "path": "root/The%Mighty$Function/Default",
              },
              "IamRole": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                  "version": "12.0.1",
                },
                "id": "IamRole",
                "path": "root/The%Mighty$Function/IamRole",
              },
              "IamRolePolicy": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                  "version": "12.0.1",
                },
                "id": "IamRolePolicy",
                "path": "root/The%Mighty$Function/IamRolePolicy",
              },
              "IamRolePolicyAttachment": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.iamRolePolicyAttachment.IamRolePolicyAttachment",
                  "version": "12.0.1",
                },
                "id": "IamRolePolicyAttachment",
                "path": "root/The%Mighty$Function/IamRolePolicyAttachment",
              },
              "S3Object": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.s3Object.S3Object",
                  "version": "12.0.1",
                },
                "id": "S3Object",
                "path": "root/The%Mighty$Function/S3Object",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "display": Object {
              "description": "A cloud function (FaaS)",
              "title": "Function",
            },
            "id": "The%Mighty$Function",
            "path": "root/The%Mighty$Function",
          },
          "WingLogger": Object {
            "attributes": Object {
              "wing:resource:connections": Array [
                Object {
                  "direction": "inbound",
                  "implicit": true,
                  "relationship": "print",
                  "resource": "root/The%Mighty$Function",
                },
              ],
              "wing:resource:stateful": true,
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "display": Object {
              "description": "A cloud logging facility",
              "hidden": true,
              "title": "Logger",
            },
            "id": "WingLogger",
            "path": "root/WingLogger",
          },
          "aws": Object {
            "constructInfo": Object {
              "fqn": "@cdktf/provider-aws.provider.AwsProvider",
              "version": "12.0.1",
            },
            "id": "aws",
            "path": "root/aws",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.0",
>>>>>>> main
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
